--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-      <h1><strong>GS. 389 M.S. TOMAS A. ECHEVARRIA</strong></h1>
+      <h1><strong>GS. M.S. TOMAS A. ECHEVARRIA 389</strong></h1>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
